add prismjs for example site

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -15,6 +15,7 @@
     -->
     <title>Gridual - Flexible Grid System for React</title>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/themes/prism.min.css">
   </head>
   <body>
     <div id="root"></div>
@@ -28,5 +29,7 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/prism.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/components/prism-jsx.min.js"></script>
   </body>
 </html>
